--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 { 
-    "token"  : "NjA4Nzg1NzU4MjA3MDgyNTAw.XUtOBA.K8k_kCAnDs7u3WJtJ8f_OHtqwbg",
+    "token"  : "NjA4Nzg1NzU4MjA3MDgyNTAw.XVCC9g.0XBKDG43dDZDzyXpy19wzw-GdrU",
     "prefix" : "."
   }
